--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,6 +2,8 @@ version: 0.2
 
 phases:
   install:
+    runtime-versions:
+       python: 3.7
     commands:
        - sudo apt update -y
        - sudo apt install python3 -y
