--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
     runtime-versions:
        python: 3.8
     commands:
-       - sudo apt update -y
+       - sudo apt update
        - sudo apt install python3 -y
        - sudo apt install python3-dev -y
        - sudo apt install python3-pip -y
