remove commands in install phase

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,10 +4,10 @@ phases:
   install:
     runtime-versions:
        python: 3.8
-    commands:
-       - sudo apt install python3 -y
-       - sudo apt install python3-dev -y
-       - sudo apt install python3-pip -y
+    # commands:
+    #    - sudo apt install python3 -y
+    #    - sudo apt install python3-dev -y
+    #    - sudo apt install python3-pip -y
   build:
     commands:
       - pip3 install configparser -t .
